--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -7,12 +7,12 @@ postgresql_bin_path: "/usr/lib/{{ postgresql_version }}/bin"
 postgresql_dir_path: "{{ encrypted_root }}/postgresql"
 postgresql_process_path: "{{ '/var/run/postgresql' if ansible_distribution_version == '18.04' else postgresql_dir_path }}"
 postgresql_backup_dir: "{{ encrypted_root }}/backups/postgresql"
-postgresql_home: "{{ postgresql_dir_path }}/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
+postgresql_data_dir: "{{ postgresql_dir_path }}/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
 postgresql_config_home: "/etc/postgresql/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
 postgresql_pid_file: "{{ postgresql_process_path }}/{{ postgresql_version }}-{{ postgresql_cluster_name }}.pid"
 postgres_install_dir: "/usr/lib/postgresql/{{ postgresql_version }}"
-postgresql_log_directory: "{{ postgresql_home }}/pg_log"
-postgresql_recovery_conf: "{{ postgresql_home }}/recovery.conf"
+postgresql_log_directory: "{{ postgresql_data_dir }}/pg_log"
+postgresql_recovery_conf: "{{ postgresql_data_dir }}/recovery.conf"
 postgresql_num_logs_to_keep: 20
 pgstandby_wal_keep_segments: 8
 postgresql_wal_keep_segments: 8
