--- a/src/commcare_cloud/ansible/setup_pg_standby.yml
+++ b/src/commcare_cloud/ansible/setup_pg_standby.yml
@@ -29,11 +29,11 @@
         state: stopped
 
     - file:
-       path:  "{{ postgresql_home }}"
+       path:  "{{ postgresql_data_dir }}"
        state: absent
 
     - file:
-       path:  "{{ postgresql_home }}"
+       path:  "{{ postgresql_data_dir }}"
        owner: postgres
        group: postgres
        mode:  0700
@@ -47,7 +47,7 @@
   tasks:
     - name: get master size
       delegate_to: "{{ hot_standby_master }}"
-      shell: du -s {{ postgresql_home }}
+      shell: du -s {{ postgresql_data_dir }}
       register: master_size_output
 
     - debug:
@@ -60,7 +60,7 @@
         {{ postgres_install_dir }}/bin/pg_basebackup \
           -h {{ hot_standby_master }} \
           -U {{ postgres_users.replication.username }} \
-          -D {{ postgresql_home }} \
+          -D {{ postgresql_data_dir }} \
           -S {{ replication_slot }} \
           -R -v --xlog-method=stream 2>&1
       async: 36000
@@ -100,7 +100,7 @@
 
     - name: Reset ownership
       file:
-        dest: "{{ postgresql_home }}"
+        dest: "{{ postgresql_data_dir }}"
         state: directory
         recurse: yes
         owner: postgres
