--- a/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
@@ -28,12 +28,12 @@
 
  - name: Set up Citus Worker DBs
    import_tasks: setup_worker.yml
-   when: inventory_hostname in groups.citusdb_worker
+   when: not is_pg_standby and inventory_hostname in groups.citusdb_worker
    tags:
      - configure
 
  - name: Setup citusdb_master
    import_tasks: setup_cordinator.yml
-   when: inventory_hostname in groups.citusdb_master
+   when: not is_pg_standby and inventory_hostname in groups.citusdb_master
    tags:
     - configure
