--- a/src/commcare_cloud/ansible/deploy_postgres.yml
+++ b/src/commcare_cloud/ansible/deploy_postgres.yml
@@ -2,16 +2,14 @@
 - import_playbook: host_group_aliases.yml
 
 - name: PostgreSQL Machine Setup
-  hosts:
-    - postgresql
-    - pg_standby
+  hosts: postgresql:pg_standby:!citusdb
   become: true
   roles:
     - {role: ecryptfs, tags: 'ecryptfs'}
     - {role: backups, tags: 'backups'}
 
 - name: PostgreSQL
-  hosts: postgresql:pg_standby
+  hosts: postgresql:pg_standby:!citusdb
   become: true
   roles:
     - {role: postgresql, tags: 'postgresql'}
@@ -67,9 +65,7 @@
 # Disables transparent huge pages (THP)
 - name: Disable THP
   become: true
-  hosts:
-    - postgresql
-    - pg_standby
+  hosts: postgresql:pg_standby:!citusdb
   tags: 'kernel_tuning'
   roles:
     - role: thp
