--- a/src/commcare_cloud/ansible/setup_pg_standby.yml
+++ b/src/commcare_cloud/ansible/setup_pg_standby.yml
@@ -10,6 +10,9 @@
   vars_files:
     - roles/postgresql_base/defaults/main.yml
   tasks:
+    - include_vars:
+        file: roles/citusdb/defaults/main.yml
+      when: "'citusdb' in groups"
     - assert:
         that:
           - "hot_standby_master is defined"
