--- a/src/commcare_cloud/ansible/roles/bootstrap-users/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/bootstrap-users/tasks/main.yml
@@ -61,6 +61,11 @@
   authorized_key: user=ansible state=present key="{{ lookup('file', authorized_keys_dir ~ item ~ '.pub') }}"
   with_items: '{{ dev_users.present }}'
 
+- name: Remove password expiry
+  become: yes
+  chage: user={{ item }} sp_max=-1
+  loop: "{{ dev_users.present }} + ['ansible', '{{ cchq_user }}']"
+
 - import_tasks: remove_users.yml
   when: dev_users.absent
 
