rename postgresql home var

--- a/src/commcare_cloud/ansible/roles/pg_backup/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/pg_backup/defaults/main.yml
@@ -1,7 +1,7 @@
 postgresql_version: '9.6'
 postgresql_port: 5432
 postgresql_backup_dir: "{{ encrypted_root }}/backups/postgresql"
-postgresql_home: /var/lib/postgresql
+postgresql_user_home: /var/lib/postgresql
 postgresql_dir_path: "{{ encrypted_root }}/postgresql"
 postgresql_data_dir: "{{ postgresql_dir_path }}/{{ postgresql_version }}/main"
 
