--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -2,7 +2,7 @@ postgresql_version: '9.6'
 postgresql_cluster_name: 'main'
 postgresql_port: 5432
 postgresql_ssl_enabled: False
-postgresql_home: /var/lib/postgresql
+postgresql_user_home: /var/lib/postgresql
 postgresql_bin_path: "/usr/lib/postgresql/{{ postgresql_version }}/bin"
 postgresql_dir_path: "{{ encrypted_root }}/postgresql"
 postgresql_process_path: "{{ '/var/run/postgresql' if ansible_distribution_version == '18.04' else postgresql_dir_path }}"
