specific lib folder

--- a/src/commcare_cloud/ansible/ansible.cfg
+++ b/src/commcare_cloud/ansible/ansible.cfg
@@ -11,7 +11,7 @@ fact_caching_timeout = 21600
 timeout = 30
 
 inventory_plugins = ./plugins/inventory
-library = ./library:~/.ansible/roles
+library = ./library:~/.ansible/roles/lqueryvg.chage/library
 
 forks = 50
 
