--- a/src/commcare_cloud/ansible/roles/citusdb/meta/main.yml
+++ b/src/commcare_cloud/ansible/roles/citusdb/meta/main.yml
@@ -4,3 +4,6 @@ dependencies:
   - role: postgresql_base
     postgresql_version: '11'
     postgresql_cluster_name: 'main'
+    postgresql_shared_preload_libraries:
+     - 'citus'
+     - 'pg_stat_statements'
