--- a/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/citusdb/tasks/main.yml
@@ -22,6 +22,16 @@
     state: present
    notify: Restart postgres
 
+ - name: Install and configure postgresql
+   include_role:
+     name: postgresql_base
+   vars:
+     postgresql_version: '11'
+     postgresql_cluster_name: 'main'
+     postgresql_shared_preload_libraries:
+       - 'citus'
+       - 'pg_stat_statements'
+
  - name: Set up Citus Worker DBs
    import_tasks: setup_worker.yml
    when: not is_pg_standby and inventory_hostname in groups.citusdb_worker
