--- a/src/commcare_cloud/ansible/roles/citusdb/tasks/setup_worker.yml
+++ b/src/commcare_cloud/ansible/roles/citusdb/tasks/setup_worker.yml
@@ -6,7 +6,7 @@
   postgresql_db:
     name: "{{ item.name }}"
     state: present
-    port: "{{ postgresql_port }}"
+    port: "{{ __postgresql_port }}"
     owner: "{{ item.user }}"
     encoding: 'UTF-8'
     lc_collate: 'en_US.UTF-8'
