--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -259,6 +259,41 @@ servers:
     volume_size: 80
     group: "celery"
     os: bionic
+  - server_name: "celery8-production"
+    server_instance_type: t3.xlarge
+    network_tier: "app-private"
+    az: "c"
+    volume_size: 80
+    group: "celery"
+    os: bionic
+  - server_name: "celery9-production"
+    server_instance_type: t3.xlarge
+    network_tier: "app-private"
+    az: "c"
+    volume_size: 80
+    group: "celery"
+    os: bionic
+  - server_name: "celery10-production"
+    server_instance_type: t3.xlarge
+    network_tier: "app-private"
+    az: "c"
+    volume_size: 80
+    group: "celery"
+    os: bionic
+  - server_name: "celery11-production"
+    server_instance_type: t3.xlarge
+    network_tier: "app-private"
+    az: "c"
+    volume_size: 80
+    group: "celery"
+    os: bionic
+  - server_name: "celery12-production"
+    server_instance_type: t3.xlarge
+    network_tier: "app-private"
+    az: "c"
+    volume_size: 80
+    group: "celery"
+    os: bionic
 
   - server_name: "pillow0-production"
     server_instance_type: r5a.4xlarge
