Add couchdb restore script

--- a/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
@@ -90,6 +90,20 @@
     - cron
     - backups
 
+- name: Copy couch restore script
+  become: yes
+  template:
+    src: "restore_couchdb_backup.sh.j2"
+    dest: "/usr/local/sbin/restore_couchdb_backup.sh"
+    group: couchdb
+    owner: couchdb
+    mode: 0700
+    backup: yes
+  when: backup_couch|bool
+  tags:
+    - cron
+    - backups
+
 - name: Create Daily Cron job (cleanup blobdb)
   become: yes
   cron:
