--- a/src/commcare_cloud/ansible/roles/pg_backup/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/pg_backup/tasks/main.yml
@@ -23,4 +23,4 @@
   when: "'pg_backup' in group_names"
 
 - import_tasks: backup.yml
-  when: backup_postgres in ["plain", "dump", "pgbackrest"]
+  when: backup_postgres in ["plain", "dump"]
