fix 'bare variable' deprecation warning
[DEPRECATION WARNING]: evaluating XXX as a bare variable, this behaviour will go away and you might need to add |bool to the expression in the future.

--- a/src/commcare_cloud/ansible/deploy_commcarehq.yml
+++ b/src/commcare_cloud/ansible/deploy_commcarehq.yml
@@ -48,7 +48,7 @@
   hosts: proxy
   tasks:
     - include_tasks: roles/commcarehq/tasks/proxy_websockets.yml
-      when: run_websockets_wsgi
+      when: run_websockets_wsgi|bool
       tags: services
 
 - name: Webworker Supervisor Config
