--- a/src/commcare_cloud/ansible/roles/couchdb/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/couchdb/tasks/main.yml
@@ -134,7 +134,7 @@
     owner: couchdb
     mode: 0700
     backup: yes
-  when: backup_couch
+  when: backup_couch|bool
   tags:
     - cron
     - backups
@@ -150,7 +150,7 @@
     user: couchdb
     cron_file: backup_couch
     state: absent
-  when: backup_couch
+  when: backup_couch|bool
   tags:
     - cron
     - backups
@@ -166,7 +166,7 @@
     user: couchdb
     cron_file: backup_couch
     state: absent
-  when: backup_couch
+  when: backup_couch|bool
   tags:
     - cron
     - backups
@@ -181,7 +181,7 @@
     weekday: "1,2,3,4,5,6"
     user: couchdb
     cron_file: backup_couch
-  when: backup_couch
+  when: backup_couch|bool
   tags:
     - cron
     - backups
@@ -196,7 +196,7 @@
     weekday: 0
     user: couchdb
     cron_file: backup_couch
-  when: backup_couch
+  when: backup_couch|bool
   tags:
     - cron
     - backups
@@ -210,7 +210,7 @@
   vars:
     s3_user: "couchdb"
     s3_user_home_dir: "{{ couchdb_dir }}"
-  when: couch_s3
+  when: couch_s3|bool
   tags:
     - cron
     - backups
