Add note about running django-manage commands in python 3

--- a/changelog/0023-upgrade-to-python-3.yml
+++ b/changelog/0023-upgrade-to-python-3.yml
@@ -31,3 +31,5 @@ update_steps: |
   ```bash
   cchq <env> fab restart_services
   ```
+  6. [Optional] To run management commands in Python 3 when using `cchq <env> django-manage`,
+  set `py3_run_deploy` in `fab-settings.yml` to `True`.
