--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -49,6 +49,22 @@ ssh_allow_password_users:
 default_from_email: commcarehq-noreply@icds-cas.gov.in
 server_email: commcarehq-noreply@icds-cas.gov.in
 cchq_bug_report_email: commcarehq-bug-reports@icds-cas.gov.in
+root_email: commcarehq-ops+root@dimagi.com
+server_admin_email: commcarehq-ops+admins@dimagi.com
+support_email: support@dimagi.com
+probono_support_email: pro-bono@dimagi.com
+accounts_email: accounts@dimagi.com
+data_email: datatree@dimagi.com
+subscription_change_email: accounts+subchange@dimagi.com
+internal_subscription_change_email: accounts+subchange+internal@dimagi.com
+billing_email: sales@dimagi.com
+invoicing_contact_email: billing-support@dimagi.com
+growth_email: growth@dimagi.com
+master_list_email: master-list@dimagi.com
+report_builder_add_on_email: sales@dimagi.com
+eula_change_email: eula-notifications@dimagi.com
+contact_email: info@dimagi.com
+soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
 
 commcare_errors_branch: "master-icds"
 site_locations:
