--- a/environments/staging/public.yml
+++ b/environments/staging/public.yml
@@ -23,6 +23,26 @@ formplayer_archive_time_spec: '10m'
 
 KSPLICE_ACTIVE: yes
 
+root_email: commcarehq-ops+root@dimagi.com
+server_email: commcarehq-noreply@dimagi.com
+server_admin_email: commcarehq-ops+admins@dimagi.com
+default_from_email: commcarehq-noreply@dimagi.com
+support_email: support@dimagi.com
+probono_support_email: pro-bono@dimagi.com
+cchq_bug_report_email: commcarehq-bug-reports@dimagi.com
+accounts_email: accounts@dimagi.com
+data_email: datatree@dimagi.com
+subscription_change_email: accounts+subchange@dimagi.com
+internal_subscription_change_email: accounts+subchange+internal@dimagi.com
+billing_email: sales@dimagi.com
+invoicing_contact_email: billing-support@dimagi.com
+growth_email: growth@dimagi.com
+master_list_email: master-list@dimagi.com
+report_builder_add_on_email: sales@dimagi.com
+eula_change_email: eula-notifications@dimagi.com
+contact_email: info@dimagi.com
+soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
+
 couch_dbs:
   default:
     host: "{{ groups.couchdb2_proxy.0 }}"
