--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -211,6 +211,7 @@ localsettings:
   EMAIL_SMTP_HOST: relay.sendermile.com
   EMAIL_SMTP_PORT: 26
   EMAIL_USE_TLS: yes
+  ENABLE_SOFT_ASSERT_EMAILS: True
   HQ_INSTANCE: 'icds'
   INACTIVITY_TIMEOUT: 20160
   INVOICE_FROM_ADDRESS:
