--- a/environments/pna/public.yml
+++ b/environments/pna/public.yml
@@ -91,6 +91,7 @@ localsettings:
   EMAIL_SMTP_HOST: 'localhost'
   EMAIL_SMTP_PORT: 25
   EMAIL_USE_TLS: no
+  ENABLE_SOFT_ASSERT_EMAILS: True
   HQ_INSTANCE: 'pna'
   HUBSPOT_API_ID:
   HUBSPOT_API_KEY:
