--- a/environments/production/public.yml
+++ b/environments/production/public.yml
@@ -115,6 +115,7 @@ localsettings:
   EMAIL_SMTP_HOST: email-smtp.us-east-1.amazonaws.com
   EMAIL_SMTP_PORT: 587
   EMAIL_USE_TLS: yes
+  ENABLE_SOFT_ASSERT_EMAILS: True
   HQ_INSTANCE: 'www'
   INACTIVITY_TIMEOUT: 20160
   INVOICE_FROM_ADDRESS:
