--- a/environments/staging/public.yml
+++ b/environments/staging/public.yml
@@ -86,6 +86,7 @@ localsettings:
   EMAIL_SMTP_HOST: email-smtp.us-east-1.amazonaws.com
   EMAIL_SMTP_PORT: 587
   EMAIL_USE_TLS: yes
+  ENABLE_SOFT_ASSERT_EMAILS: True
   ENFORCE_TWO_FACTOR_FOR_SUPERUSERS: False
   EULA_COMPLIANCE: True
   HQ_INSTANCE: 'staging'
