--- a/environments/swiss/public.yml
+++ b/environments/swiss/public.yml
@@ -99,6 +99,7 @@ localsettings:
   EMAIL_SMTP_HOST: email-smtp.us-east-1.amazonaws.com
   EMAIL_SMTP_PORT: 587
   EMAIL_USE_TLS: yes
+  ENABLE_SOFT_ASSERT_EMAILS: True
   EULA_COMPLIANCE: True
   HQ_INSTANCE: 'swiss'
   HUBSPOT_API_ID:
