--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -146,7 +146,7 @@ couchdb_cluster_settings:
   n: 2
 
 couchdb_compaction_settings:
-  _default: '[{db_fragmentation, "10%"}, {view_fragmentation, "10%"}, {from, "17:00"}, {to, "22:30"}]'
+  _default: '[{db_fragmentation, "10%"}, {view_fragmentation, "10%"}, {from, "17:00"}, {to, "05:00"}, {strict_window, true}]'
 
 couchdb2:
   username: "{{ localsettings_private.COUCH_USERNAME }}"
