fix check for user processes
This is simpler and also fixes the issue when the username gets
truncated in the output e.g. 'userna+'

--- a/src/commcare_cloud/ansible/roles/bootstrap-users/tasks/remove_users.yml
+++ b/src/commcare_cloud/ansible/roles/bootstrap-users/tasks/remove_users.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Get running processes
-  shell: "ps aux | grep -v grep | grep -Ew \"{{ dev_users.absent|join('|') }}\" | awk '{print $2}'"
+  shell: "ps -o pid= -u \"{{ dev_users.absent|join(',') }}\""
   register: running_processes
   changed_when: no
 
