--- a/environments/development/postgresql.yml
+++ b/environments/development/postgresql.yml
@@ -5,7 +5,7 @@ postgres_override:
   postgresql_effective_cache_size: 4GB
   postgresql_log_directory: '{{ encrypted_root }}/pg_log'
   postgresql_max_stack_depth: 6MB
-  postgresql_max_standby_delay: -1
+  postgresql_max_standby_delay: '-1'
   postgresql_shared_buffers: 128MB
 
 dbs:
