--- a/environments/enikshay-reference/postgresql.yml
+++ b/environments/enikshay-reference/postgresql.yml
@@ -9,7 +9,7 @@ postgres_override:
   postgresql_shared_buffers: '128MB'
   postgresql_max_stack_depth: '6MB'
   postgresql_effective_cache_size: '4GB'
-  postgresql_max_standby_delay: -1
+  postgresql_max_standby_delay: '-1'
 
 pgbouncer_override:
   pgbouncer_max_connections: 100
