--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -31,7 +31,7 @@ postgresql_work_mem: '8MB'
 postgresql_shared_buffers: '1024MB'
 postgresql_max_stack_depth: '2MB'
 postgresql_effective_cache_size: '128MB'
-postgresql_max_standby_delay: 0  # 0 means don't set in postgresql.conf (leaving default value)
+postgresql_max_standby_delay: ''  # empty means don't set in postgresql.conf (leaving default value)
 postgresql_maintenance_work_mem: '64MB'
 postgresql_checkpoint_completion_target: '0.5'
 postgresql_wal_buffers: '-1'
