--- a/src/commcare_cloud/ansible/roles/datadog/tasks/add_integrations.yml
+++ b/src/commcare_cloud/ansible/roles/datadog/tasks/add_integrations.yml
@@ -42,6 +42,17 @@
   tags:
     - datadog_integrations
 
+- name: Install airflow check
+  get_url:
+    url: "https://raw.githubusercontent.com/dimagi/datadog-checks/{{ datadog_airflow_version }}/airflow/airflow.py"
+    dest: /etc/dd-agent/checks.d/airflow.py
+    sha256sum: "{{ datadog_airflow_sha256sum }}"
+    force: yes
+  when: datadog_integration_airflow|bool
+  notify: restart datadog
+  tags:
+    - datadog_integrations
+
 - name: add datadog integration configs
   template: src="{{ item.name }}.yaml.j2" dest="/etc/dd-agent/conf.d/{{ item.name }}.yaml"
   notify: restart datadog
@@ -49,6 +60,7 @@
     - datadog_integrations
   when: item is defined and item.enabled
   with_items:
+    - {"name": "airflow", "enabled": "{{ datadog_integration_airflow }}"}
     - {"name": "elastic", "enabled": "{{ datadog_integration_elastic }}"}
     - {"name": "gunicorn", "enabled": "{{ datadog_integration_gunicorn }}"}
     - {"name": "kafka", "enabled": "{{ datadog_integration_kafka }}"}
