--- a/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
@@ -166,6 +166,9 @@
     - cron
     - backups
 
+- import_tasks: compact.yml
+  when: compact_couch_cron and inventory_hostname == groups.couchdb2.0
+
 - name: Set up aws credentials
   become: yes
   import_role:
