--- a/src/commcare_cloud/ansible/roles/backups/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/backups/tasks/main.yml
@@ -1,3 +1,9 @@
+# todo:  The backups code doesn't really logically handle what happens when more than one
+# todo:  server hosts a service, because it runs the same backup code on all of them,
+# todo:  which depending on the service is either redundant (backup happens multiple times)
+# todo:  or conflicting (shards uploaded to the same place, overwrite each other)
+# todo:  I don't know the implications of this, possibly currently only used on monoliths.
+
 - name: Set up aws credentials
   become: yes
   import_role:
@@ -89,3 +95,29 @@
     dest: /usr/local/bin/check_s3_backup.py
     mode: "u=rwx,g=rx,o=rx"
   when: postgres_s3 or couch_s3 or blobdb_s3
+  tags:
+    - backup_checks
+
+- name: Create Daily Check Backups Cron job
+  become: yes
+  cron:
+    name: "Check {{ item.service }} s3 backups"
+    job: "/usr/local/bin/check_s3_backup.py {{ item.service }} > /tmp/check_s3_backup-{{ item.service }} || { echo /tmp/check_s3_backup-{{ item.service }} | mail -s 'Recent {{ item.service }} backups missing' {{ check_s3_backups_email }}; }"
+    state: "{{ 'present' if item.condition else 'absent' }}"
+    minute: 0
+    hour: "{{ nadir_hour|default(0) }}"
+    weekday: "1,2,3,4,5,6"
+    user: "{{ item.user }}"
+    cron_file: "backup_{{ item.service }}"
+  with_items:
+    - service: 'blobdb'
+      condition: "{{ check_s3_backups_email and blobdb_s3 and backup_blobdb and 'shared_dir_host' in group_names }}"
+      user: "{{ blobdb_user }}"
+    - service: 'postgres'
+      condition: "{{ check_s3_backups_email and postgres_s3 and backup_postgres and ('postgresql' in group_names or 'pg_backup' in group_names) }}"
+      user: "postgres"
+    - service: 'couch'
+      condition: "{{ check_s3_backups_email and couch_s3 and backup_couch and ('couchdb2' in group_names) }}"
+      user: "couchdb"
+  tags:
+    - backup_checks
