--- a/environments/swiss/public.yml
+++ b/environments/swiss/public.yml
@@ -77,7 +77,7 @@ report_builder_add_on_email: sales@dimagi.com
 eula_change_email: eula-notifications@dimagi.com
 contact_email: info@dimagi.com
 soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
-check_s3_backups_email: commcarehq-ops+root@dimagi.com
+check_s3_backups_email: commcarehq-ops+root@dimagi.com,httu.admin@swisstph.ch
 
 TWO_FACTOR_GATEWAY_ENABLED: True
 
