--- a/src/commcare_cloud/ansible/group_vars/all.yml
+++ b/src/commcare_cloud/ansible/group_vars/all.yml
@@ -94,6 +94,7 @@ datadog_integration_vmware: false
 datadog_integration_http: false
 datadog_integration_haproxy: false
 datadog_integration_tcp_check: false
+datadog_integration_disk_check: true
 datadog_extra_host_checks: []
 datadog_patch_modules:
   - requests:true
