--- a/src/commcare_cloud/ansible/roles/datadog/tasks/remove_integrations.yml
+++ b/src/commcare_cloud/ansible/roles/datadog/tasks/remove_integrations.yml
@@ -74,3 +74,4 @@
     - {"name": "haproxy", "enabled": "{{ datadog_integration_haproxy }}"}
     # "Datadog Integration Graveyard": list globally removed integrations below
     - {"name": "couchdb2", "enabled": false}
+    - {"name": "disk", "enabled": "{{ datadog_integration_disk_check }}"}
