update grub after change

--- a/src/commcare_cloud/ansible/roles/thp/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/thp/tasks/main.yml
@@ -34,4 +34,9 @@
     line: 'GRUB_CMDLINE_LINUX_DEFAULT="transparent_hugepage=never"'
     backrefs: yes
     state: present
+    register: grup_updated
   when: uses_grub.stat.exists
+
+- name: update grub
+  command: update-grub
+  when: grub_updated is changed
