run kernel_tuning after reboot

--- a/src/commcare_cloud/ansible/deploy_db.yml
+++ b/src/commcare_cloud/ansible/deploy_db.yml
@@ -95,7 +95,9 @@
     - rabbitmq
     - riakcs
     - formplayer
-  tags: 'kernel_tuning'
+  tags:
+    - kernel_tuning
+    - after-reboot
   roles:
     - role: thp
 
