--- a/src/commcare_cloud/ansible/deploy_kafka.yml
+++ b/src/commcare_cloud/ansible/deploy_kafka.yml
@@ -26,6 +26,8 @@
   hosts:
     - zookeeper
     - kafka
-  tags: 'kernel_tuning'
+  tags:
+    - kernel_tuning
+    - after-reboot
   roles:
     - role: thp
