--- a/src/commcare_cloud/ansible/deploy_citusdb.yml
+++ b/src/commcare_cloud/ansible/deploy_citusdb.yml
@@ -21,12 +21,13 @@
   roles:
     - {role: pgbouncer, tags: 'pgbouncer'}
 
-
 # Disables transparent huge pages (THP)
 - name: Disable THP
   become: true
   hosts:
     - citusdb
-  tags: 'kernel_tuning'
+  tags:
+    - kernel_tuning
+    - after-reboot
   roles:
     - role: thp
