set net.core.somaxconn for redis

--- a/src/commcare_cloud/ansible/roles/redis/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/redis/tasks/main.yml
@@ -18,6 +18,14 @@
   notify: reload monit
   tags: monit
 
+- name: Set net.core.somaxconn
+  become: yes
+  sysctl:
+    name: net.core.somaxconn
+    value: 65535
+    state: present
+    sysctl_file: /etc/sysctl.d/90-somaxconn.conf
+
 - meta: flush_handlers
 
 - monit:
