--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -302,6 +302,13 @@ servers:
     volume_size: 150
     group: "pillowtop"
     os: trusty
+  - server_name: "pillow1-production"
+    server_instance_type: r5a.4xlarge
+    network_tier: "app-private"
+    az: "c"
+    volume_size: 150
+    group: "pillowtop"
+    os: bionic
 
   - server_name: "formplayer0-production"
     server_instance_type: t3.large
