--- a/environments/production/terraform.yml
+++ b/environments/production/terraform.yml
@@ -267,21 +267,21 @@ servers:
     group: "celery"
     os: bionic
   - server_name: "celery9-production"
-    server_instance_type: t3.xlarge
+    server_instance_type: t3.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 80
     group: "celery"
     os: bionic
   - server_name: "celery10-production"
-    server_instance_type: t3.xlarge
+    server_instance_type: t3.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 80
     group: "celery"
     os: bionic
   - server_name: "celery11-production"
-    server_instance_type: t3.xlarge
+    server_instance_type: t3.2xlarge
     network_tier: "app-private"
     az: "c"
     volume_size: 80
