--- a/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/couchdb2/tasks/main.yml
@@ -166,6 +166,17 @@
     - cron
     - backups
 
+- name: Set up check_s3_backups
+  become: yes
+  import_role:
+    name: backups
+    tasks_from: set_up_check_s3_backups.yml
+  vars:
+    service: 'couch'
+    condition: "{{ check_s3_backups_email and couch_s3 and backup_couch and ('couchdb2' in group_names) }}"
+    user: "couchdb"
+    service_backup_dir: "{{ couch_backup_dir }}"
+
 - import_tasks: compact.yml
   when: compact_couch_cron and inventory_hostname == groups.couchdb2.0
 
