Fix recent change to "Get running processes" task

--- a/src/commcare_cloud/ansible/roles/bootstrap-users/tasks/remove_users.yml
+++ b/src/commcare_cloud/ansible/roles/bootstrap-users/tasks/remove_users.yml
@@ -4,6 +4,7 @@
   shell: "ps -o pid= -u \"{{ dev_users.absent|join(',') }}\""
   register: running_processes
   changed_when: no
+  failed_when: no
 
 - name: Kill running processes
   become: yes
