--- a/src/commcare_cloud/ansible/roles/pg_backup/tasks/backup.yml
+++ b/src/commcare_cloud/ansible/roles/pg_backup/tasks/backup.yml
@@ -10,3 +10,5 @@
 
 - include_tasks: backup_plain.yml
   when: "'pg_backup' in group_names and (backup_postgres == 'plain' or backup_postgres == 'dump')"
+  tags:
+    - always
