--- a/environments/swiss/public.yml
+++ b/environments/swiss/public.yml
@@ -73,7 +73,7 @@ billing_email: sales@dimagi.com
 invoicing_contact_email: billing-support@dimagi.com
 growth_email: growth@dimagi.com
 master_list_email: master-list@dimagi.com
-report_builder_add_on_email: sales@dimagi.com
+sales_email: sales@dimagi.com
 eula_change_email: eula-notifications@dimagi.com
 contact_email: info@dimagi.com
 soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
