--- a/environments/64-test/public.yml
+++ b/environments/64-test/public.yml
@@ -89,6 +89,7 @@ invoicing_contact_email: droberts+billing-support@dimagi.com
 growth_email: droberts+growth@dimagi.com
 master_list_email: droberts+master-list@dimagi.com
 sales_email: droberts+sales@dimagi.com
+privacy_email: droberts+privacy@dimagi.com
 eula_change_email: droberts+eula-notifications@dimagi.com
 contact_email: droberts+info@dimagi.com
 soft_assert_email: droberts+commcarehq-ops+soft_asserts@dimagi.com
