--- a/environments/icds-cas/public.yml
+++ b/environments/icds-cas/public.yml
@@ -61,6 +61,7 @@ invoicing_contact_email: billing-support@dimagi.com
 growth_email: growth@dimagi.com
 master_list_email: master-list@dimagi.com
 sales_email: sales@dimagi.com
+privacy_email: privacy@dimagi.com
 eula_change_email: eula-notifications@dimagi.com
 contact_email: info@dimagi.com
 soft_assert_email: commcarehq-ops+soft_asserts@dimagi.com
