--- a/src/commcare_cloud/ansible/group_vars/all.yml
+++ b/src/commcare_cloud/ansible/group_vars/all.yml
@@ -120,6 +120,7 @@ invoicing_contact_email: billing-support@example.com
 growth_email: growth@example.com
 master_list_email: master-list@example.com
 sales_email: sales@example.com
+privacy_email: privacy@dimagi.com
 eula_change_email: eula-notifications@example.com
 contact_email: info@example.com
 soft_assert_email: commcarehq-ops+soft_asserts@example.com
