--- a/src/commcare_cloud/ansible/group_vars/all.yml
+++ b/src/commcare_cloud/ansible/group_vars/all.yml
@@ -121,6 +121,7 @@ growth_email: growth@example.com
 master_list_email: master-list@example.com
 sales_email: sales@example.com
 privacy_email: privacy@dimagi.com
+feedback_email: hq-feedback@dimagi.com
 eula_change_email: eula-notifications@example.com
 contact_email: info@example.com
 soft_assert_email: commcarehq-ops+soft_asserts@example.com
