--- a/src/commcare_cloud/ansible/roles/common/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/common/tasks/main.yml
@@ -132,6 +132,16 @@
   tags:
     - postfix
 
+- name: "Set at.deny"
+  become: yes
+  template:
+    src: at.deny
+    dest: /etc/at.deny
+    owner: root
+    group: root
+    mode: 0640
+    backup: yes
+
 
 - import_tasks: antivirus.yml
   tags:
