--- a/src/commcare_cloud/ansible/roles/pgbouncer/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/pgbouncer/tasks/main.yml
@@ -40,6 +40,11 @@
   tags:
     - pgbouncer
 
+# Allows to excecute task only when a tag is specified: https://serverfault.com/a/748864
+- shell: /bin/true
+  changed_when: false
+  register: no_tags
+
 - name: Restarts pgbouncer (affect max open files limit)
   command: /bin/true
   notify: Restart pgbouncer
