Add proxy1-production to proxy group

--- a/environments/production/inventory.ini
+++ b/environments/production/inventory.ini
@@ -4,6 +4,7 @@
 10.202.20.47 hostname=proxy1-production ufw_private_interface=ens5 ansible_python_interpreter=/usr/bin/python3 public_ip=100.24.216.221
 
 [proxy:children]
+proxy1
 proxy0
 
 [web2]
