setting wal archive on master node

--- a/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
+++ b/src/commcare_cloud/ansible/roles/postgresql_base/defaults/main.yml
@@ -14,6 +14,7 @@ postgres_install_dir: "/usr/lib/postgresql/{{ postgresql_version }}"
 postgresql_log_directory: "{{ postgresql_data_dir }}/pg_log"
 postgresql_recovery_conf: "{{ postgresql_data_dir }}/recovery.conf"
 postgresql_num_logs_to_keep: 20
+postgresql_wal_level: 'hot_standby'
 pgstandby_wal_keep_segments: 8
 postgresql_wal_keep_segments: 8
 postgresql_archive_timeout: 300
