--- a/src/commcare_cloud/ansible/roles/ansible-control/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/ansible-control/tasks/main.yml
@@ -33,7 +33,7 @@
       - virtualenv
       - virtualenvwrapper
     extra_args: '--ignore-installed six'
-    umask: 0022
+    umask: "0022"
 
 - name: Check whether init has been run
   become: yes
