use correct module params

--- a/src/commcare_cloud/ansible/roles/common/tasks/main.yml
+++ b/src/commcare_cloud/ansible/roles/common/tasks/main.yml
@@ -145,7 +145,7 @@
 - name: "remove at.allow"
   become: yes
   file:
-    file: /etc/at.allow
+    path: /etc/at.allow
     state: absent
 
 - import_tasks: antivirus.yml
